--- a/src/app/auth/profile/components/indexes/indexes.component.html
+++ b/src/app/auth/profile/components/indexes/indexes.component.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-12">
-          <h2>
+          <h2 style="margin-top: 0;">
             My teams
 
             <button *ngIf="confirmed && indexes && !loading && (indexes.length - stopped_world_count) > 5" (click)="newIndex()" class="btn btn-success mr-1" style="margin-left: 3%;">
