--- a/src/app/header/contact-dialog.html
+++ b/src/app/header/contact-dialog.html
@@ -1,6 +1,7 @@
 <div class="contact-container">
   <a (click)="dialogRef.close()" class="close"></a>
-  <h1 class="mat-primary" style="color: #18BC9C; margin-top: 0px;" mat-dialog-title>Contact us</h1>
+  <h2 class="gd-secondary" style="color: #18BC9C; margin-top: 0px;" mat-dialog-title>Contact us</h2>
+  <hr/>
 	<p>If you want us to reply, please also enter your email address.</p>
 
   <div mat-dialog-content *ngIf="submitted==false" style=" min-width: 40%;">
