--- a/src/app/indexer/alliance/alliance.component.scss
+++ b/src/app/indexer/alliance/alliance.component.scss
@@ -11,3 +11,9 @@
 .filter-input {
   border: 1px solid #334254;
 }
+
+.sub-card {
+  box-shadow: none !important;
+  margin: 0 !important;
+  padding: 5px !important;
+}
