--- a/src/app/indexer/player/player.component.scss
+++ b/src/app/indexer/player/player.component.scss
@@ -10,5 +10,7 @@
 }
 
 .sub-card {
-  box-shadow: 0px 0px 10px 1px #18333305 !important;
+  box-shadow: none !important;
+  margin: 0 !important;
+  padding: 5px !important;
 }
