--- a/src/app/indexer/siege/siege-details-dialog.html
+++ b/src/app/indexer/siege/siege-details-dialog.html
@@ -4,12 +4,10 @@
 	<app-siege
 		[embedded]="true"
 		[isCard]="false"
-		[hideKey]="false"
 		[key]="key"
 		[conquestId]="conquestId"
 		[conquest]="conquest"
-		[world]="world"
-		[getByUid]="getByUid">
+		[world]="world">
 	</app-siege>
 
 </div>
