--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -10,7 +10,7 @@
 		      <img style="height: 25px; margin-top: -5px;" src="../../assets/images/town_ico.png"/>&nbsp;
 		      <span class="gd-brown">{{townName}}</span>
 	      </div>
-	      &nbsp;<button name="open_bb" class="btn btn-primary" (click)="copyBB()">
+	      &nbsp;<button name="open_bb" class="btn btn-secondary" (click)="copyBB()" style="vertical-align: text-top;">
 	        <i class="fa fa-clipboard"></i>&nbsp;<span *ngIf="!copied">Copy BB</span><span *ngIf="copied">Copied!&nbsp;</span>
         </button>
       </h2>
