--- a/src/app/shared/dialogs/donate/donate.component.html
+++ b/src/app/shared/dialogs/donate/donate.component.html
@@ -23,7 +23,7 @@
               <span id="donate_mail">admin@grepodata.com</span>
               <span class="copy-txt" (click)="copyText('donate_mail')"><mat-icon>content_copy</mat-icon></span>
             </h4>
-            <a class="donate-btn paypal" href="https://paypal.me/grepodata" target="_blank"><img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-mark-monotone-transparent.svg"/>paypal.me/grepodata</a>
+            <a class="donate-btn paypal" href="https://paypal.me/grepodata" target="_blank"><img src="assets/images/icons/pp.svg"/>paypal.me/grepodata</a>
           </div>
 
         </div>
