--- a/src/app/alliance/alliance.component.html
+++ b/src/app/alliance/alliance.component.html
@@ -25,7 +25,7 @@
 <!--      </app-alert>-->
 
       <div class="alliance-cards" style="margin-bottom: 0 !important;" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-        <mat-card class="dense-card" fxFlex="25">
+        <mat-card class="dense-card" fxFlex="40" fxFlex.lg="30" fxFlex.gt-lg="25" >
           <div class="card-header bg-gd-1 text-center" style="padding-bottom: 20px !important;">
             <h1 class="gd-white entity-name">
 	            <div class="icon-circle"><img style="height: 25px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/></div> {{allianceName}}
@@ -81,7 +81,7 @@
 	              <tr *ngIf="hasIndex">
 	                  <th>Town intelligence</th>
 	                  <td>
-	                      <a (click)="openIntelTab()" class="a-link">Browse intel <i class="fa fa-arrow-circle-right"></i></a>
+	                      <a (click)="openIntelTab()" class="a-link gd-primary">Browse intel <i class="fa fa-arrow-circle-right"></i></a>
 	                  </td>
 	              </tr>
               </tbody>
@@ -95,7 +95,7 @@
                   <mat-expansion-panel hideToggle="true" [expanded]="compareOpened">
                     <mat-expansion-panel-header *ngIf="!compareOpened" class="gd-btn-1" (click)="addToCompare()">
                       <mat-panel-title class="gd-secondary" fxLayoutAlign="center center">
-                        <mat-icon><i class="fa fa-plus"></i></mat-icon>&nbsp;&nbsp;Compare
+                        <mat-icon><i class="fa fa-plus" style="vertical-align: bottom;"></i></mat-icon>&nbsp;&nbsp;Compare
                       </mat-panel-title>
                     </mat-expansion-panel-header>
                     <h4 *ngIf="compareOpened" fxLayoutAlign="center center">
@@ -126,7 +126,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="dense-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
+        <mat-card class="dense-card" fxFlex="60" fxFlex.lg="70" fxFlex.gt-lg="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
 	        <div #infoTabs style="width: 100%;"></div>
           <mat-tab-group mat-stretch-tabs animationDuration="0ms" [selectedIndex]="tabsIndex"
                          (click)="cdr.detectChanges();" (selectedTabChange)="onTabClick($event)">
@@ -318,10 +318,10 @@
 
       <div class="alliance-cards" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="5px">
 
-        <mat-card class="dense-card" fxFlex="60" fxFlex.gt-md="60" fxFlex.gt-xs="100">
+        <mat-card class="dense-card" fxFlex="100" fxFlex.gt-md="60">
           <mat-card-title>
             <div fxLayout="row">
-	            <h3 style='font-weight: 700; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Alliance members</span></h3>
+	            <h3 style='font-weight: 700; color: #304357; margin-top: 0;'><span class='world-title' style='color: #18BC9C;'>Alliance members</span></h3>
             </div>
           </mat-card-title>
           <mat-card-content [ngClass]="{'loading-overlay': loadingMembers}">
@@ -482,7 +482,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="dense-card" fxFlex="40">
+        <mat-card class="dense-card" fxFlex="100" fxFlex.gt-md="40">
           <mat-card-content>
 
 	          <app-conquest [embedded]="true" [params]="{type: 'alliance', world: world, id: id}"></app-conquest>
