--- a/src/app/conquest/conquest.component.html
+++ b/src/app/conquest/conquest.component.html
@@ -52,7 +52,7 @@
 				</div>
 
 				<div class="col-xs-2" *ngIf="embedded && !minimal">
-					<h3 style='font-weight: 700; color: #304357;'>
+					<h3 style='font-weight: 700; color: #304357; margin-top: 0;'>
 						<span class='world-title' style='color: #18BC9C;'>Conquests</span>
 					</h3>
 				</div>
