--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -239,7 +239,7 @@ nav #menu li:hover {
   }
 }
 
-@media (min-width:900px) {
+@media (min-width:910px) {
   #brand {
     font-size: 35px !important;
   }
@@ -252,7 +252,7 @@ nav #menu li:hover {
   }
 }
 
-@media (min-width:1000px) {
+@media (min-width:1010px) {
   #brand {
     font-size: 35px !important;
   }
@@ -338,7 +338,7 @@ $donate-primary: #18BC9C;
 .a-donate-link {
   font: 14px "Helvetica";
   display: inline-block;
-  margin: 20px;
+  margin: 20px 20px 0px;
   position: relative;
   text-decoration: none;
 
