--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -24,7 +24,7 @@
 <!--      </app-alert>-->
 
       <div class="player-cards" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-        <mat-card class="dense-card" fxFlex="25" style="">
+        <mat-card class="dense-card" fxFlex="40" fxFlex.lg="32" fxFlex.gt-lg="25" style="">
           <div class="card-header bg-gd-1 text-center" style="padding-bottom: 20px !important;">
             <h1 class="gd-white entity-name">
               <div class="icon-circle"><img style="height: 25px; margin-top: -5px;" src="../../assets/images/player_ico.png"/></div> {{playerName}}
@@ -57,7 +57,7 @@
                   <th>Rank</th>
                   <td>
 	                  <a routerLink="/ranking/player/{{world}}/points/{{rank}}/{{id}}">{{rank}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm">launch</mat-icon></a>
-	                  <span *ngIf="playerInfoData.rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.rank_date,'D MMM YYYY')}}">
+	                  <span class="hidden-xxs" *ngIf="playerInfoData.rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.rank_date,'D MMM YYYY')}}">
 		                  best: {{playerInfoData.rank_max}}
 	                  </span>
                   </td>
@@ -66,7 +66,7 @@
                   <th>Towns</th>
                   <td>
 	                  <a class="a-link" (click)="showTownDialog()">{{towns}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm">launch</mat-icon></a>
-	                  <span *ngIf="playerInfoData.towns_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.towns_date,'D MMM YYYY')}}">
+	                  <span class="hidden-xxs" *ngIf="playerInfoData.towns_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.towns_date,'D MMM YYYY')}}">
 		                  best: {{playerInfoData.towns_max}}
 	                  </span>
                   </td>
@@ -81,9 +81,9 @@
                 <tr>
                   <th>Attacking</th>
                   <td *ngIf="att">
-	                  <a *ngIf="playerInfoData.att_rank" routerLink="/ranking/player/{{world}}/attack/{{playerInfoData.att_rank}}/{{id}}">#{{playerInfoData.att_rank}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm hidden-md">launch</mat-icon></a>
+	                  <a class="gd-primary" *ngIf="playerInfoData.att_rank" routerLink="/ranking/player/{{world}}/attack/{{playerInfoData.att_rank}}/{{id}}">#{{playerInfoData.att_rank}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm hidden-md">launch</mat-icon></a>
 	                  {{att | NumberFilter}}<span class="hidden-xs"> points</span>
-	                  <span *ngIf="playerInfoData.att_rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.att_rank_date,'D MMM YYYY')}}">
+	                  <span class="hidden-xxs" *ngIf="playerInfoData.att_rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.att_rank_date,'D MMM YYYY')}}">
 		                  best: {{playerInfoData.att_rank_max}}
 	                  </span>
                   </td>
@@ -92,9 +92,9 @@
                 <tr>
                   <th>Defending</th>
                   <td *ngIf="def">
-	                  <a *ngIf="playerInfoData.def_rank" routerLink="/ranking/player/{{world}}/defence/{{playerInfoData.def_rank}}/{{id}}">#{{playerInfoData.def_rank}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm hidden-md">launch</mat-icon></a>
+	                  <a class="gd-primary" *ngIf="playerInfoData.def_rank" routerLink="/ranking/player/{{world}}/defence/{{playerInfoData.def_rank}}/{{id}}">#{{playerInfoData.def_rank}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm hidden-md">launch</mat-icon></a>
 	                  {{def | NumberFilter}}<span class="hidden-xs"> points</span>
-	                  <span *ngIf="playerInfoData.def_rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.def_rank_date,'D MMM YYYY')}}">
+	                  <span class="hidden-xxs" *ngIf="playerInfoData.def_rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.def_rank_date,'D MMM YYYY')}}">
 		                  best: {{playerInfoData.def_rank_max}}
 	                  </span>
                   </td>
@@ -103,9 +103,9 @@
                 <tr class="hidden-xs">
                   <th>Fighting</th>
                   <td *ngIf="def&&att">
-	                  <a *ngIf="playerInfoData.fight_rank" routerLink="/ranking/player/{{world}}/fight/{{playerInfoData.fight_rank}}/{{id}}">#{{playerInfoData.fight_rank}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm hidden-md">launch</mat-icon></a>
+	                  <a class="gd-primary" *ngIf="playerInfoData.fight_rank" routerLink="/ranking/player/{{world}}/fight/{{playerInfoData.fight_rank}}/{{id}}">#{{playerInfoData.fight_rank}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs hidden-sm hidden-md">launch</mat-icon></a>
 	                  {{def+att | NumberFilter}}<span class="hidden-xs"> points</span>
-	                  <span *ngIf="playerInfoData.fight_rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.fight_rank_date,'D MMM YYYY')}}">
+	                  <span class="hidden-xxs" *ngIf="playerInfoData.fight_rank_max" style="float: right; font-style: italic; font-size: .9em;" matTooltip="{{datePipe.transform(playerInfoData.fight_rank_date,'D MMM YYYY')}}">
 		                  best: {{playerInfoData.fight_rank_max}}
 	                  </span>
                   </td>
@@ -122,7 +122,7 @@
                   <mat-expansion-panel hideToggle="true" [expanded]="compareOpened">
                     <mat-expansion-panel-header *ngIf="!compareOpened" class="gd-btn-1" (click)="addToCompare()">
                       <mat-panel-title class="gd-secondary" fxLayoutAlign="center center">
-                        <mat-icon><i class="fa fa-plus"></i></mat-icon>&nbsp;&nbsp;Compare
+                        <mat-icon><i class="fa fa-plus" style="vertical-align: bottom;"></i></mat-icon>&nbsp;&nbsp;Compare
                       </mat-panel-title>
                     </mat-expansion-panel-header>
                     <h4 *ngIf="compareOpened" fxLayoutAlign="center center">
@@ -155,7 +155,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="dense-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
+        <mat-card class="dense-card" fxFlex="60" fxFlex.lg="68" fxFlex.gt-lg="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
 	        <div #infoTabs style="width: 100%;"></div>
           <mat-tab-group [selectedIndex]="tabsIndex" (selectedTabChange)="onTabClick($event)" mat-stretch-tabs>
             <mat-tab class="history-chart" style="padding: 20px 0; overflow: hidden !important;">
@@ -414,7 +414,7 @@
         <mat-card class="dense-card" fxFlex fxFlex.gt-md="57" fxFlex.gt-sm="100">
           <mat-card-title>
             <div fxLayout="row">
-              <h4 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>History</span></h4>
+              <h3 style='font-weight: 300; color: #304357; margin-top: 0;'><span class='world-title' style='color: #18BC9C;'>History</span></h3>
               <mat-spinner style="margin-left: 30px;" *ngIf="loadingHistory" strokeWidth="3" [diameter]="30"></mat-spinner>
             </div>
           </mat-card-title>
