--- a/src/app/shared/dialogs/intel-source/intel-source.component.html
+++ b/src/app/shared/dialogs/intel-source/intel-source.component.html
@@ -1,18 +1,16 @@
 <div mat-dialog-content style="min-width: 90%; min-height: 70%;">
+
+  <a (click)="close()" class="close"></a>
+  <h2 class="gd-secondary" style="margin-top: 0;">Report details</h2>
+  <hr/>
+
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12">
-				<a (click)="close()" class="close"></a>
 
         <div class="intel-record">
-          <h3 class="gd-primary">Report details</h3>
 
-          <h3>
-            <img style="height: 18px; margin-top: -5px;" src="../../assets/images/town_ico.png"/>&nbsp;<a style="color: #5e7a92;" routerLink="/intel/town/{{world}}/{{intel_record?.town_id}}">{{intel_record?.town_name}}</a> -
-            <img style="height: 18px; margin-top: -5px;" src="../../assets/images/player_ico.png"/>&nbsp;<a style="color: #5e7a92;" routerLink="/intel/player/{{world}}/{{intel_record?.player_id}}">{{intel_record?.player_name}}</a> -
-            <img style="height: 18px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/>&nbsp;<a style="color: #5e7a92;" routerLink="/intel/alliance/{{world}}/{{intel_record?.alliance_id}}">{{intel_record?.alliance_name}}</a> -
-            <span *ngIf="world"><span [outerHTML]="world | WorldNamePipe"></span></span>
-          </h3>
+          <app-indexer-breadcrumbs [data]="breadcrumb_data"></app-indexer-breadcrumbs>
 
           <div style="overflow: auto;">
             <div class="table intel-table" id="table_all" style="">
@@ -167,22 +165,13 @@
               </span>
               </div>
               <div class="cell" *ngIf="expanded_info_available" style="padding: 6px;">
-                <button class="btn btn-success btn-xs mr-1" routerLink="/profile/team/{{index.key}}">
-                  View overview <mat-icon style="opacity: 1; vertical-align: sub;" class="hidden-xs">launch</mat-icon>
+                <button class="btn btn-default mr-1" routerLink="/profile/team/{{index.key}}">
+                  Team overview <mat-icon style="opacity: 1; vertical-align: sub; font-size: 20px;" class="hidden-xs">launch</mat-icon>
                 </button>
-<!--                <button *ngIf="index.role==='admin'||index.role==='owner'" class="btn btn-danger btn-xs mr-1" routerLink="/profile/team/{{index.key}}">-->
-<!--                  Delete intel from team <mat-icon style="opacity: 1; vertical-align: sub;" class="hidden-xs">delete</mat-icon>-->
-<!--                </button>-->
-<!--                <h6 *ngIf="index.role!=='admin'&&index.role!=='owner'"><strong>Unauthorized:</strong> you are not an admin of this team</h6>-->
               </div>
             </div>
           </div>
 
-          <div style="margin-top: 10px;"></div>
-          <span *ngIf="world"><span [outerHTML]="world | WorldNamePipe"></span></span>
-          <a class="top-index-card" routerLink="/profile/teams" style="color: #949494; font-weight: 700; font-size: 21px; float: right;">
-            View all my teams <mat-icon style="opacity: 1; vertical-align: sub;" class="hidden-xs">launch</mat-icon>
-          </a>
         </div>
 
 
@@ -192,12 +181,3 @@
 	</div>
 </div>
 
-<!--<div mat-dialog-actions class="dialog-action">-->
-<!--	<div class="container-fluid">-->
-<!--		<div class="row">-->
-<!--			<div class="col-xs-12">-->
-<!--				<button mat-button class="mat-focus-indicator mat-raised-button bg-gd-1 text-white mat-button mat-button-base" (click)="close()" style="float: right;">Close</button>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</div>-->
